samples/_failures_safe/1761182897_6ee067_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ee0959c.c: In function ‘main’:
./samples/SAFE/__tmp_1ee0959c.c:121:5: error: expected expression at end of input
  121 |     set_element(&mat3, 0,
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_1ee0959c.c:121:5: error: too few arguments to function ‘set_element’
./samples/SAFE/__tmp_1ee0959c.c:37:5: note: declared here
   37 | int set_element(struct Matrix *mat, size_t row, size_t col, double value) {
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_1ee0959c.c:121:5: error: expected declaration or statement at end of input
  121 |     set_element(&mat3, 0,
      |     ^~~~~~~~~~~
